Performace em consulta por nome e id do Cliente